# toolbox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  compose.yaml  manage.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: alwaysdata.yml  bandit.yml  bumpversion.yml  pip-audit.yml  pre-commit.yml  pytest.yml
apps/accounts/: adapter.py  admin.py  api.py  apps.py  forms.py  models.py  serializers.py  urls.py  validators.py  views.py  viewsets.py
apps/accounts/locale/fr/LC_MESSAGES/: django.mo  django.po
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templates/account/: password_change.html
apps/accounts/templates/accounts/: profile.html
apps/accounts/templates/allauth/elements/: alert.html  button.html  field.html  form.html  h1.html  h2.html
apps/anniversaries/: README.md  apps.py  urls.py  utils.py  views.py
apps/anniversaries/admin/: __init__.py  calendars.py  families.py  persons.py
apps/anniversaries/locale/fr/LC_MESSAGES/: django.mo  django.po
apps/anniversaries/management/commands/: send_event_reminders.py
apps/anniversaries/migrations/: 0001_initial.py
apps/anniversaries/models/: __init__.py  calendars.py  families.py  persons.py
apps/anniversaries/templates/anniversaries/: event_reminders.html  event_reminders.txt
apps/anniversaries/templates/anniversaries/widgets/: upcoming_birthdays.html
apps/budgets/: apps.py
apps/core/: apps.py  models.py  urls.py  views.py
apps/core/admin/: __init__.py  mixins.py  sites.py
apps/core/locale/fr/LC_MESSAGES/: django.mo  django.po
apps/core/management/commands/: customize.py
apps/core/migrations/: 0001_initial.py  0002_sitecustomization_api_theme.py
apps/core/models/: __init__.py  mixins.py  sites.py
apps/core/templates/core/: landing.html
apps/core/templates/core/widgets/: stats.html
apps/labbooks/: README.md  apps.py  urls.py
apps/labbooks/locale/fr/LC_MESSAGES/: django.mo  django.po
apps/libraries/: README.md  apps.py  urls.py
templates/: 400.html  403.html  404.html  500.html  authentication.html  base.html  context_processors.py  menus.html  messages.html
templates/components/: footer.html  menus.html  navbar.html
templates/django/forms/widgets/: select.html  textarea.html
templates/elements/: authentication.html  filter.html
templates/forms/: base.html
templates/rest_framework/: api.html
tests/: debug_test.py  templates_test.py
toolbox/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
