[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolbox"
version = "v0.0.0"
requires-python = ">= 3.12"
dependencies = ["django >= 5.0"]
authors = [{ name = "Julien Lebunetel", email = "julien@lebunetel.com" }]
maintainers = [{ name = "Julien Lebunetel", email = "julien@lebunetel.com" }]
description = "A generic application to make the development of Django modules easier."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["Django", "sandbox"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Operating System :: POSIX :: Linux",
    "Environment :: Web Environment",
]

[project.optional-dependencies]
dev = [
    "django-stubs[compatible-mypy]",
    "commitizen",
    "mypy",
    "pip-tools",
    "pre-commit",
    "pylama",
    "pylint",
    "pylint-django",
    "ruff",
]
test = ["pytest", "pytest-cov", "pytest-django", "pytest-xdist[psutil]"]

[project.urls]
Homepage = "https://github.com/jlebunetel/toolbox"
Repository = "https://github.com/jlebunetel/toolbox"
Issues = "https://github.com/jlebunetel/toolbox/issues"
Changelog = "https://github.com/jlebunetel/toolbox/blob/main/CHANGELOG.md"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "toolbox.settings"

[tool.pylint]
load-plugins = ["pylint_django"]
django-settings-module = "toolbox.settings"

[tool.pylama]
format = "pylint"
linters = "eradicate,mccabe,mypy,pycodestyle,pyflakes,pylint,radon,vulture,isort"

[tool.pylama.linter.vulture]
min-confidence = 80

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pip-tools]
generate-hashes = false
upgrade = true
strip-extras = true

[tool.pytest.ini_options]
addopts = """
--numprocesses=auto \
--cov=./ \
--cov-report=term:skip-covered \
--cov-report=html \
--cov-fail-under=90
"""
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "toolbox.settings"

[tool.coverage.run]
omit = [
    "manage.py",
    "toolbox/asgi.py",
    "toolbox/settings.py",
    "toolbox/urls.py",
    "toolbox/wsgi.py",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "v0.0.0"
version_files = ["pyproject.toml:project:version"]
tag_format = "v$version"
update_changelog_on_bump = true
annotated_tag = true
