[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolbox"
dynamic = ["version"]
requires-python = ">= 3.12"
dependencies = [
    "crispy-bootstrap3",
    "django >= 5.0 , < 5.1",                      # BUG
    "django-allauth",
    "django-crispy-forms",
    "django-filter",
    "django-stubs[compatible-mypy] == 5.0.4",     # BUG
    "djangorestframework",
    "djangorestframework-stubs[compatible-mypy]",
    "icalendar",
    "markdown",
    "psycopg[binary,pool]",
    "pydantic",
    "pydantic-settings",
    "python-json-logger",
    "rich",
]
authors = [{ name = "Julien Lebunetel", email = "julien@lebunetel.com" }]
maintainers = [{ name = "Julien Lebunetel", email = "julien@lebunetel.com" }]
description = "A generic application to make the development of Django modules easier."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["Django", "sandbox"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Operating System :: POSIX :: Linux",
    "Environment :: Web Environment",
]

[project.optional-dependencies]
dev = [
    "commitizen",
    "mypy >= 1.11 , < 1.12", # BUG
    "pip-tools",
    "pre-commit",
    "pylint",
    "pylint-django",
    "radon",
    "ruff",
    "vulture",
]
test = ["pytest", "pytest-cov", "pytest-django", "pytest-xdist[psutil]"]

[project.urls]
Homepage = "https://toolbox.lebunetel.com"
Repository = "https://github.com/jlebunetel/toolbox"
Issues = "https://github.com/jlebunetel/toolbox/issues"
Changelog = "https://github.com/jlebunetel/toolbox/blob/main/CHANGELOG.md"

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.8.0"
version_files = [
    "pyproject.toml:version",
    "README.md:version-",
    "toolbox/__init__.py:__version__",
]
tag_format = "$version"
update_changelog_on_bump = true
annotated_tag = true

[tool.coverage.run]
omit = [
    "manage.py",
    "toolbox/asgi.py",
    "toolbox/settings.py",
    "toolbox/urls.py",
    "toolbox/wsgi.py",
]

[tool.django-stubs]
django_settings_module = "toolbox.settings"

[tool.hatch.version]
path = "toolbox/__init__.py"

[tool.mypy]
packages = ["apps", "tests", "templates", "toolbox"]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
cache_dir = "/dev/null"
check_untyped_defs = true

[tool.pip-tools]
generate-hashes = false
upgrade = true
strip-extras = true

[tool.pylama]
format = "pylint"
linters = "eradicate,mccabe,pycodestyle,pyflakes,radon,vulture"

[[tool.pylama.files]]
path = "*/migrations/*.py"
skip = 1

[tool.pylama.linter.vulture]
min-confidence = 65

[tool.pylint]
django-settings-module = "toolbox.settings"
ignore-path = ["^.*/migrations/.*$", "venv"]
init-hook = 'import sys; sys.path.append("apps")'
jobs = 1
load-plugins = ["pylint_django"]
max-line-length = 88
output-format = "colorized"
recursive = true
disable = ["duplicate-code"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--numprocesses=auto",
    "--cov=./",
    "--cov-report=term:skip-covered",
    "--cov-report=html",
]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "toolbox.settings"

[tool.radon]
cc_min = "B"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.vulture]
paths = ["apps", "templates", "tests", "toolbox"]
min_confidence = 80
